@@ -1,3 +1,7 @@
+2018-03-23  Carl Hetherington  <cth@carlh.net>
+
+	* Add space shortcut to start/stop playback (#1201).
+
 2018-03-22  Carl Hetherington  <cth@carlh.net>
 
 	* Allow CPL selection in player (#1239).
